--- a/style.css
+++ b/style.css
@@ -33,6 +33,19 @@ button {
 .hidden {
   visibility: hidden;
 }
+.loader {
+  position: fixed;
+  background: #fff;
+  z-index: 99999;
+  width: 100%;
+  height: 100%;
+}
+.loader img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 /* Main Section */
 
 .navbar {
